--- a/src/CarteiraPet.WebApp/appsettings.json
+++ b/src/CarteiraPet.WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+  "ConnectionStrings": {    
+    "DefaultConnection": "Server=localhost,1433;Database=carteirapet;User Id=sa;Password=YourStrong@Passw0rd;"
   },
   "Logging": {
     "LogLevel": {
