--- a/src/CarteiraPet.WebApp/appsettings.json
+++ b/src/CarteiraPet.WebApp/appsettings.json
@@ -1,13 +1,17 @@
 {
   "ConnectionStrings": {    
-    "DefaultConnection": "Server=localhost,1433;Database=carteirapet;User Id=sa;Password=YourStrong@Passw0rd;"
+    "DefaultConnection": "Server=localhost,1433;Database=carteirapet;User Id=sa;Password=YourStrong@Passw0rd;",
+    "BaseLog": "mongodb://localhost:27017/Serilog"   
   },
+
+  "AllowedHosts": "*",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
+
