--- a/src/CarteiraPet.WebApp/CarteiraPet.WebApp.csproj
+++ b/src/CarteiraPet.WebApp/CarteiraPet.WebApp.csproj
@@ -13,9 +13,16 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="2.0.0-preview1-final" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9" />
+        <PackageReference Include="MongoDB.Bson" Version="2.13.1" />
+        <PackageReference Include="Serilog.AspNetCore" Version="4.1.1-dev-00229" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.2.0" />
+        <PackageReference Include="Serilog.Sinks.MongoDB" Version="5.0.0-dev-00105" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CarteiraPet.Commom\CarteiraPet.Commom.csproj" />
       <ProjectReference Include="..\CarteiraPet.Infra\CarteiraPet.Infra.csproj" />
     </ItemGroup>
 
