--- a/src/CarteiraPet.WebApp/appsettings.Development.json
+++ b/src/CarteiraPet.WebApp/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=carteirapet;User Id=sa;Password=YourStrong@Passw0rd;",
+    "BaseLog": "mongodb://localhost:27017/Serilog"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
