--- a/src/CarteiraPet.WebApp/appsettings.Development.json
+++ b/src/CarteiraPet.WebApp/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=carteirapet;User Id=sa;Password=YourStrong@Passw0rd;",
+    "carteirapetIdentity": "Server=localhost,1433;Database=carteirapetIdentity;User Id=sa;Password=YourStrong@Passw0rd;",
+    "carteirapet": "Server=localhost,1433;Database=carteirapet;User Id=sa;Password=YourStrong@Passw0rd;",
     "BaseLog": "mongodb://localhost:27017/Serilog"
   },
   "Logging": {
