--- a/src/CarteiraPet.WebApp/CarteiraPet.WebApp.csproj
+++ b/src/CarteiraPet.WebApp/CarteiraPet.WebApp.csproj
@@ -23,7 +23,9 @@
 
     <ItemGroup>
       <ProjectReference Include="..\CarteiraPet.Commom\CarteiraPet.Commom.csproj" />
-      <ProjectReference Include="..\CarteiraPet.Infra\CarteiraPet.Infra.csproj" />
+      <ProjectReference Include="..\CarteiraPet.Infra.Domain\CarteiraPet.Infra.Domain.csproj" />
+      <ProjectReference Include="..\CarteiraPet.Infra.Identity\CarteiraPet.Infra.Identity.csproj" />
+      <ProjectReference Include="..\CarteiraPet.Ioc\CarteiraPet.Ioc.csproj" />
     </ItemGroup>
 
 </Project>
