--- a/src/CarteiraPet.Service/CarteiraPet.Service.csproj
+++ b/src/CarteiraPet.Service/CarteiraPet.Service.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CarteiraPet.Domain\CarteiraPet.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Serilog" Version="2.10.0" />
+    </ItemGroup>
+
 </Project>
