--- a/src/CarteiraPet.Domain/CarteiraPet.Domain.csproj
+++ b/src/CarteiraPet.Domain/CarteiraPet.Domain.csproj
@@ -5,7 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.13" />
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.9" />
-    </ItemGroup>
+    </ItemGroup>  
 
 </Project>
