--- a/src/CarteiraPet.Domain/CarteiraPet.Domain.csproj
+++ b/src/CarteiraPet.Domain/CarteiraPet.Domain.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.13" />
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.9" />
-    </ItemGroup>  
+      <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
+    </ItemGroup>   
 
 </Project>
