--- a/src/CarteiraPet.Service/CarteiraPet.Service.csproj
+++ b/src/CarteiraPet.Service/CarteiraPet.Service.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.2.3" />
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.9" />
       <PackageReference Include="Serilog" Version="2.10.0" />
+      <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
     </ItemGroup>   
 
 </Project>
