--- a/src/CarteiraPet.WebApp/CarteiraPet.WebApp.csproj
+++ b/src/CarteiraPet.WebApp/CarteiraPet.WebApp.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.2.0" />
         <PackageReference Include="Serilog.Sinks.MongoDB" Version="5.0.0-dev-00105" />
+        <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
     </ItemGroup>
 
     <ItemGroup>
