adicionando estrutura de teste de integracao

--- a/src/CarteiraPet.WebApp/CarteiraPet.WebApp.csproj
+++ b/src/CarteiraPet.WebApp/CarteiraPet.WebApp.csproj
@@ -34,4 +34,8 @@
       <ProjectReference Include="..\CarteiraPet.Ioc\CarteiraPet.Ioc.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="appsettings.Test.json" />
+    </ItemGroup>
+
 </Project>
