--- a/CarteiraPet.IntegrationTests/CarteiraPet.IntegrationTests.csproj
+++ b/CarteiraPet.IntegrationTests/CarteiraPet.IntegrationTests.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="34.0.1" />
         <PackageReference Include="FluentAssertions" Version="6.5.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.15" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
